ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5/input.ts.stderr
error: Invalid unicode code point
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5/input.ts:3:13
  |
3 | var x = "\u{r}\u{n}\u{t}";
  |             ^

